--- a/res/drawable/login_button.xml
+++ b/res/drawable/login_button.xml
@@ -5,9 +5,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="true" >
      <shape>
         <gradient
-            android:endColor="#6794FF"
-            android:centerColor="#6794FF"
-            android:startColor="#6794FF"
+            android:endColor="#2EAADC"
+            android:centerColor="#2e53dc"
+            android:startColor="#2EAADC"
             android:angle="270" />
         <stroke
             android:width="5dp"
@@ -17,25 +17,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
     </shape>
 </item>
 
-<item android:state_focused="true" >
-    <shape>
-        <gradient
-            android:endColor="#ffffff"
-            android:centerColor="#ffffff"
-            android:startColor="#ffffff"
-            android:angle="270" />
-        <stroke
-            android:width="3dp"
-            android:color="#00ff00" />
-        <corners
-            android:radius="5dp" />
-        <padding
-            android:left="10dp"
-            android:top="10dp"
-            android:right="10dp"
-            android:bottom="10dp" />
-    </shape>
-</item>
+
 
 <item>        
     <shape>
