--- a/res/layout/locationonedoor.xml
+++ b/res/layout/locationonedoor.xml
@@ -10,24 +10,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
- <TextView
-     android:id="@+id/textViewTwoDoors"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_alignParentTop="true"
-     android:layout_centerHorizontal="true"
-     android:layout_marginTop="52dp"
-     android:text="@string/locationonedoor"
-     android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TextView
+        android:id="@+id/textViewOneDoor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:text="@string/locationonedoor"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
- <Button
-     android:id="@+id/buttonOneDoorOne"
-     android:layout_width="200sp"
-     android:layout_height="150sp"
-     android:layout_centerHorizontal="true"
-     android:layout_centerVertical="true"
-     android:background="@drawable/login_button"
-     android:text="@string/doorOne"
-     android:textColor="#ffffff" />
+    <Button
+        android:id="@+id/buttonOneDoorOne"
+        android:layout_width="200sp"
+        android:layout_height="150sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textViewOneDoor"
+        android:layout_marginTop="110dp"
+        android:background="@drawable/login_button"
+        android:text="@string/doorOne"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
