changed examples/ button colors

--- a/res/drawable/doorfourbutton.xml
+++ b/res/drawable/doorfourbutton.xml
@@ -6,9 +6,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="true" >
      <shape>
         <gradient
-            android:endColor="#2EAADC"
-            android:centerColor="#2e53dc"
-            android:startColor="#2e53dc"
+            android:endColor="#dc2eaa"
+            android:centerColor="#b81f8c"
+            android:startColor="#b81f8c"
             android:angle="270" />
         <stroke
             android:width="5dp"
@@ -23,9 +23,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 <item>        
     <shape>
         <gradient
-            android:endColor="#2EAADC"
-            android:centerColor="#2EAADC"
-            android:startColor="#2EAADC"
+            android:endColor="#dc2eaa"
+            android:centerColor="#dc2eaa"
+            android:startColor="#dc2eaa"
             android:angle="270" />
         <stroke
             android:width="5dp"
