--- a/res/layout/locationonedoor.xml
+++ b/res/layout/locationonedoor.xml
@@ -25,8 +25,7 @@
         android:layout_width="200sp"
         android:layout_height="150sp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textViewOneDoor"
-        android:layout_marginTop="110dp"
+        android:layout_centerVertical="true"
         android:background="@drawable/login_button"
         android:text="@string/doorOne"
         android:textColor="#ffffff" />
