--- a/res/layout/locationthreedoors.xml
+++ b/res/layout/locationthreedoors.xml
@@ -20,37 +20,39 @@
         android:text="@string/locationthreedoors"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/buttonThreeDoorOne"
-        android:layout_width="200sp"
-        android:layout_height="100sp"
-        android:layout_below="@+id/textViewThreeDoors"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/dooronebutton"
-        android:text="@string/doorOne"
-        android:textColor="#ffffff" />
+        android:layout_centerVertical="true"
+        android:baselineAligned="false"
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/buttonThreeDoorTwo"
-        android:layout_width="200sp"
-        android:layout_height="100sp"
-        android:layout_below="@+id/buttonThreeDoorOne"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/doortwobutton"
-        android:text="@string/doortwoopen"
-        android:textColor="#ffffff" />
+        <Button
+            android:id="@+id/buttonThreeDoorOne"
+            android:layout_width="200sp"
+            android:layout_height="100sp"
+            android:background="@drawable/dooronebutton"
+            android:text="@string/doorOne"
+            android:textColor="#ffffff" />
 
-    <Button
-        android:id="@+id/buttonThreeDoorThree"
-        android:layout_width="200sp"
-        android:layout_height="100sp"
-        android:layout_below="@+id/buttonThreeDoorTwo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/doorthreebutton"
-        android:text="@string/doorthreeopen"
-        android:textColor="#ffffff" />
+        <Button
+            android:id="@+id/buttonThreeDoorTwo"
+            android:layout_width="200sp"
+            android:layout_height="100sp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/doortwobutton"
+            android:text="@string/doortwoopen"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/buttonThreeDoorThree"
+            android:layout_width="200sp"
+            android:layout_height="100sp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/doorthreebutton"
+            android:text="@string/doorthreeopen"
+            android:textColor="#ffffff" />
+    </LinearLayout>
 
 </RelativeLayout>
