--- a/res/layout/locationtwodoors.xml
+++ b/res/layout/locationtwodoors.xml
@@ -19,14 +19,17 @@
         android:layout_marginTop="15dp"
         android:text="@string/locationtwodoors"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+	<LinearLayout 
+	    android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:baselineAligned="false"
+        android:orientation="vertical" >
     <Button
         android:id="@+id/buttonTwoDoorOne"
         android:layout_width="200sp"
         android:layout_height="100sp"
-        android:layout_below="@+id/textViewTwoDoors"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
         android:background="@drawable/dooronebutton"
         android:text="@string/doorOne"
         android:textColor="#ffffff" />
@@ -35,11 +38,9 @@
         android:id="@+id/buttonTwoDoorTwo"
         android:layout_width="200sp"
         android:layout_height="100sp"
-        android:layout_alignLeft="@+id/buttonTwoDoorOne"
-        android:layout_below="@+id/buttonTwoDoorOne"
         android:layout_marginTop="50dp"
         android:background="@drawable/doortwobutton"
         android:text="@string/doortwoopen"
         android:textColor="#ffffff" />
-
+		</LinearLayout>
 </RelativeLayout>
