--- a/res/layout/locationonedoor.xml
+++ b/res/layout/locationonedoor.xml
@@ -26,7 +26,7 @@
         android:layout_height="150sp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/login_button"
+        android:background="@drawable/dooronebutton"
         android:text="@string/doorOne"
         android:textColor="#ffffff" />
 
