--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:layout_alignRight="@+id/editText2"
             android:layout_below="@+id/editText2"
             android:layout_marginTop="14dp"
+            android:checked="true"
             android:text="@string/RememberMe"
             android:textSize="@dimen/activity_horizontal_margin" />
 
