--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -74,7 +74,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="14dp"
-            android:text="@string/Username"
+            android:text="@string/Email"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="20sp" />
     </RelativeLayout>
