--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:ems="10"
-            android:hint="@string/Username"
+            android:hint="@string/Email"
             android:inputType="textEmailAddress"
             android:textColor="#FFFFFF"
             android:textColorHint="#ffffff" >
@@ -70,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:checked="true"
             android:text="@string/RememberMe"
             android:textColor="#A6C3FF"
             android:textSize="13sp" />
