--- a/res/layout/locationtwodoors.xml
+++ b/res/layout/locationtwodoors.xml
@@ -26,13 +26,15 @@
         android:layout_centerVertical="true"
         android:baselineAligned="false"
         android:orientation="vertical" >
+
     <Button
         android:id="@+id/buttonTwoDoorOne"
         android:layout_width="200sp"
         android:layout_height="100sp"
         android:background="@drawable/dooronebutton"
         android:text="@string/doorOne"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonTwoDoorTwo"
@@ -41,6 +43,8 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/doortwobutton"
         android:text="@string/doortwoopen"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:visibility="invisible" />
+
 		</LinearLayout>
 </RelativeLayout>
