--- a/res/drawable/dooronebutton.xml
+++ b/res/drawable/dooronebutton.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-<selector
-xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true"
+        ><shape>
+            <gradient android:angle="270" android:centerColor="#1aa4ca" android:endColor="#1DB6E1" android:startColor="#1aa4ca" />
 
-<item android:state_pressed="true" >
-     <shape>
-        <gradient
-            android:endColor="#2EAADC"
-            android:centerColor="#2e53dc"
-            android:startColor="#2e53dc"
-            android:angle="270" />
-        <stroke
-            android:width="5dp"
-            android:color="#ffffff" />
-        <corners
-            android:radius="5dp" />
-    </shape>
-</item>
+            <stroke android:width="2dp" android:color="#000000" />
 
+            <corners android:radius="5dp" />
+        </shape>
+    </item>
+    <item><shape>
+            <gradient android:angle="270" android:centerColor="#1DB6E1" android:endColor="#1DB6E1" android:startColor="#1DB6E1" />
 
+            <stroke android:width="2dp" android:color="#000000" />
 
-<item>        
-    <shape>
-        <gradient
-            android:endColor="#2EAADC"
-            android:centerColor="#2EAADC"
-            android:startColor="#2EAADC"
-            android:angle="270" />
-        <stroke
-            android:width="5dp"
-            android:color="#ffffff" />
-        <corners
-            android:radius="5dp" />
-    </shape>
-</item></selector>
+            <corners android:radius="5dp" />
+        </shape></item>
+
+</selector>
+
