--- a/res/layout/window_title.xml
+++ b/res/layout/window_title.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="70dip"
-    android:background="#2EAADC"
-    android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:layout_height="65dip"
+    android:background="#DCDCDC"
+    
+    >
 
     <ImageView
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/logo2" />
 
-
-        <TextView
-            android:id="@+id/title"
-            android:text="The Key in your phone"
-            android:textColor="#ffffff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="20dip"
-            android:textSize="15dip" />
-
-
-</LinearLayout>
+</RelativeLayout>
