--- a/res/values/custom_style.xml
+++ b/res/values/custom_style.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <style name="CustomWindowTitleBackground">
-        <item name="android:background">#2EAADC</item>
+        <item name="android:background">#000000</item>
     </style>
 
     <style name="CustomTheme" parent="android:Theme.Holo.Light.NoActionBar">
-        <item name="android:windowTitleSize">70dp</item>
+        <item name="android:windowTitleSize">67dp</item>
         <item name="android:windowNoTitle">false</item>
         <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
     </style>
