--- a/res/layout-land/login_activity.xml
+++ b/res/layout-land/login_activity.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="15dp" >
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/email"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView3"
@@ -27,41 +27,41 @@
             android:inputType="textEmailAddress" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/password"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/editText1"
-            android:layout_below="@+id/editText1"
+            android:layout_alignLeft="@+id/email"
+            android:layout_below="@+id/email"
             android:layout_marginTop="30dp"
             android:ems="10"
             android:inputType="textPassword" />
 
         <CheckBox
-            android:id="@+id/checkBox1"
+            android:id="@+id/rememberCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/editText2"
-            android:layout_below="@+id/editText2"
+            android:layout_alignRight="@+id/password"
+            android:layout_below="@+id/password"
             android:layout_marginTop="20dp"
             android:text="@string/RememberMe" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_alignRight="@+id/checkBox1"
-            android:layout_below="@+id/checkBox1"
+            android:layout_alignLeft="@+id/registerText"
+            android:layout_alignRight="@+id/rememberCheckBox"
+            android:layout_below="@+id/rememberCheckBox"
             android:background="@drawable/login_button"
             android:text="@string/Login"
             android:textColor="#ffffff"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/registerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/editText2"
+            android:layout_alignBottom="@+id/password"
             android:layout_alignParentLeft="true"
             android:text="@string/Password"
             android:textAppearance="?android:attr/textAppearanceMedium"
