--- a/res/drawable/lock_three_button.xml
+++ b/res/drawable/lock_three_button.xml
@@ -1,36 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-<selector
-xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true"><shape>
+            <gradient android:angle="270" android:centerColor="#80fafafa" android:endColor="#4DFFFFFF" android:startColor="#80fafafa" />
 
-<item android:state_pressed="true" >
-     <shape>
-        <gradient
-            android:endColor="#9f8832"
-            android:centerColor="#8c772c"
-            android:startColor="#8c772c"
-            android:angle="270" />
-        <stroke
-            android:width="2dp"
-            android:color="#000000" />
-        <corners
-            android:radius="5dp" />
-    </shape>
-</item>
+            <corners android:radius="5dp" />
+        </shape></item>
+    <item><shape>
+            <gradient android:angle="270" android:centerColor="#40FFFFFF" android:endColor="#40FFFFFF" android:startColor="#40FFFFFF" />
+
+            <corners android:radius="5dp" />
+        </shape></item>
 
 
-
-<item>        
-    <shape>
-        <gradient
-            android:endColor="#9f8832"
-            android:centerColor="#9f8832"
-            android:startColor="#9f8832"
-            android:angle="270" />
-        <stroke
-            android:width="2dp"
-            android:color="#000000" />
-        <corners
-            android:radius="5dp" />
-    </shape>
-</item></selector>
+</selector>
