--- a/res/drawable/unlocked.xml
+++ b/res/drawable/unlocked.xml
@@ -3,9 +3,8 @@
 
 
     <item><shape>
-            <gradient android:angle="270" android:centerColor="#00cc00" android:endColor="#00cc00" android:startColor="#00cc00" />
+            <gradient android:angle="270" android:centerColor="#8C5fe100" android:endColor="#8C5fe100" android:startColor="#8C5fe100" />
 
-            <stroke android:width="2dp" android:color="#000000" />
 
             <corners android:radius="5dp" />
         </shape></item>
