--- a/res/layout/kisi_main.xml
+++ b/res/layout/kisi_main.xml
@@ -15,9 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#DCDCDC"
+        android:background="#2b4978"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
-        android:textColor="#000000" />
+        android:textColor="#FFFFFF"
+        android:textSize="25sp" />
 
 </android.support.v4.view.ViewPager>
