--- a/res/layout/place_fragment.xml
+++ b/res/layout/place_fragment.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
     android:layout_gravity="center"
-    android:background="@drawable/backgroundmain2" >
+    android:background="@drawable/testbackground" >
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -15,42 +16,66 @@
         android:baselineAligned="false"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/placeOneText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/doorOne"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:visibility="invisible" />
+
         <Button
             android:id="@+id/buttonLockOne"
             android:layout_width="300sp"
-            android:layout_height="wrap_content"
+            android:layout_height="85sp"
+            android:layout_marginTop="3sp"
             android:background="@drawable/lock_one_button"
-            android:drawableLeft="@drawable/lock"
+            android:drawableLeft="@drawable/kisi_lock"
             android:gravity="center"
+            android:paddingLeft="95sp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/placeTwoText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20sp"
             android:text="@string/doorOne"
             android:textColor="#ffffff"
-            android:textSize="35sp"
+            android:textSize="20sp"
             android:visibility="invisible" />
 
         <Button
             android:id="@+id/buttonLockTwo"
             android:layout_width="300sp"
+            android:layout_height="85sp"
+            android:layout_marginTop="3sp"
+            android:background="@drawable/lock_two_button"
+            android:drawableLeft="@drawable/kisi_lock"
+            android:gravity="center"
+            android:paddingLeft="95sp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/placeThreeText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
-            android:background="@drawable/lock_two_button"
-            android:drawableLeft="@drawable/lock"
-            android:gravity="center"
-            android:text="@string/doortwoopen"
+            android:text="@string/doorOne"
             android:textColor="#ffffff"
-            android:textSize="35sp"
+            android:textSize="20sp"
             android:visibility="invisible" />
 
         <Button
             android:id="@+id/buttonLockThree"
             android:layout_width="300sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
+            android:layout_height="85sp"
+            android:layout_marginTop="3sp"
             android:background="@drawable/lock_three_button"
-            android:drawableLeft="@drawable/lock"
+            android:drawableLeft="@drawable/kisi_lock"
             android:gravity="center"
-            android:text="@string/doorthreeopen"
-            android:textColor="#ffffff"
-            android:textSize="35sp"
+            android:paddingLeft="95sp"
             android:visibility="invisible" />
     </LinearLayout>
 
