--- a/res/values/custom_style.xml
+++ b/res/values/custom_style.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="CustomWindowTitleBackground">
-        <item name="android:background">#000000</item>
+        <item name="android:background">#2ca9dc</item>
     </style>
 
     <style name="CustomTheme" parent="android:Theme.Holo.Light.NoActionBar">
