--- a/res/menu/settings.xml
+++ b/res/menu/settings.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/refresh" android:title="@string/refresh"></item>
     <item android:id="@+id/share" android:title="@string/share"></item>
+    <item android:id="@+id/getLog" android:title="@string/log"></item>
+    <item android:id="@+id/logout" android:title="@string/logout"></item>
+    <item android:id="@+id/exit" android:title="@string/exit"></item>
     
 
 </menu>
