--- a/res/layout/loginfo.xml
+++ b/res/layout/loginfo.xml
@@ -9,9 +9,8 @@
 
     <WebView
         android:id="@+id/webView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerVertical="true" />
 
 </RelativeLayout>
